<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="false"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/app_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/app_titulo"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_info" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/edittext_primeiro_nome"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/editSobreNome"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/edittext_sobrenome"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/editNomeCurso"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/edittext_nome_curso"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <EditText
        android:id="@+id/editTelefone"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="true"
        android:ems="10"
        android:hint="@string/edittext_telefone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63" />

    <TextView
        android:id="@+id/textListaSpinner"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/selecione_curso"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:minHeight="48dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardElevation="0dp">

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="6dp"
            android:text="@string/btn_limpar" />

        <Button
            android:id="@+id/btnSalvar"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_margin="6dp"
            android:text="@string/btn_salvar" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_finalizar"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>